--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/scripts.js"></script>
   <title>address book</title>
 </head>
@@ -30,9 +31,9 @@
   </div>
 
   <div id="contact-details" class="hidden">
-    <p>First name: <span id="first-name"></span></p>
-    <p>Last name: <span id="last-name"></span></p>
-    <p>Phone Number: <span id="phone-number"></span></p>
+    <p>First name: <span class="first-name"></span></p>
+    <p>Last name: <span class="last-name"></span></p>
+    <p>Phone Number: <span class="phone-number"></span></p>
   </div>
 </body>
 </html>
