--- a/index.html
+++ b/index.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/scripts.js"></script>
-  <title>address book</title>
-</head>
-<body>
-  <h1>Address Book</h1>
-  <h2>Add a Contact:</h2>
-  <form id="new-contact">
-    <label for="new-first-name">First Name</label>
-    <input type="text" id="new-first-name" name="new-first-name">
-    
-    <label for="new-last-name">Last Name</label>
-    <input type="text" id="new-last-name" name="new-last-name">
-
-    <label for="new-phone-number"> Phone Number</label>
-    <input type="text" id="new-phone-number" name="new-phone-numbber">
-
-    <button type="submit">Add</button>
-  </form>
-
-  <h2>Contacts:</h2>
-  <div id="contacts">
-
-  </div>
-
-  <div id="contact-details" class="hidden">
-    <p>First name: <span class="first-name"></span></p>
-    <p>Last name: <span class="last-name"></span></p>
-    <p>Phone Number: <span class="phone-number"></span></p>
-    <button class="delete" type="button">Delete</button>
-  </div>
-</body>
+<html>
+  <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/scripts.js"></script>
+    <title>Address Book</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Address Book</h1>
+      </div>
+      
+      <div class="row">
+        <div class="col-md-6">
+          <hr>
+          <h2>Add a Contact:</h2>
+          <form id="new-contact">
+            <div class="form-group">
+              <label for="new-first-name">First Name</label>
+              <input type="text"  class="form-control" id="new-first-name" name="new-first-name">
+            </div>
+            <div class="form-group">
+              <label for="new-last-name">Last Name</label>
+              <input type="text"  class="form-control" id="new-last-name" name="new-last-name">
+            </div>
+            <div class="form-group">
+              <label for="new-phone-number">Phone Number</label>
+              <input type="text"  class="form-control" id="new-phone-number" name="new-phone-number">
+            </div>
+            <button type="submit" class="btn-primary">Add</button>
+          </form>
+          <hr>
+          <h2>Contacts:</h2>
+          <div id="contacts">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div id="contact-details" class="hidden">
+            <h2>Contact Details:</h2>
+            <p>First Name: <span class="first-name"></span></p>
+            <p>Last Name: <span class="last-name"></span></p>
+            <p>Phone Number: <span class="phone-number"></span></p>
+            <button class="btn-primary delete" type="button">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
